// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FavoriteButton > (Snapshot) renders favorited state 1`] = `
<div>
  <button
    aria-label="Remove from favorites"
    class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-transparent size-10 justify-center"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-heart transition-opacity fill-accent-red text-accent-red"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
      />
    </svg>
  </button>
</div>
`;

exports[`FavoriteButton > (Snapshot) renders unfavorited state 1`] = `
<div>
  <button
    aria-label="Add to favorites"
    class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-transparent size-10 justify-center"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-heart transition-opacity opacity-60 hover:opacity-100"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
      />
    </svg>
  </button>
</div>
`;
